--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
+<!doctype html>
+<html lang="en">
+  <head>
+    <metacharset="utf-8" />
+    <meta name="keywords"
+        content="charmer3412","Morganton" />
+    <meta name="Author"
+        content="Chelsea Martin" />
+      <style> h1 {color:purple;}
+              h2 {color: Orange;}
+              h3 {color: Pink;}
+      </style>
+    </head>
+<body>
+  <header> Welcome to my page </header>
 
+  <nav>
+    <ul>
+      <li>About</li>
+      <li>Projects</li>
+      <li>Contact</li>
+    </ul>
+  </nav>
+  <main section>
+    <sectiom>
+      <h1>About</h1>
+    </sectiom>
+
+    <section>
+      <h2>Projects</h2>
+    </section>
+
+    <section>
+      <h3>Contact</h3>
+    </section>
+
+    <footer>Created by: Chelsea Martin &copy; &reg; </footer>
+</body>
+</html>
