--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
+<html>
 <html lang="en">
   <head>
     <metacharset="utf-8" />
     <meta name="keywords"
-        content="charmer3412","Morganton" />
+        content="charmer3412", Morganton" />
     <meta name="Author"
         content="Chelsea Martin" />
       <style> h1 {color:purple;}
@@ -21,10 +22,10 @@
       <li>Contact</li>
     </ul>
   </nav>
-  <main section>
-    <sectiom>
+  <main>
+    <section>
       <h1>About</h1>
-    </sectiom>
+    </section>
 
     <section>
       <h2>Projects</h2>
