--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
         content="charmer3412", Morganton" />
     <meta name="Author"
         content="Chelsea Martin" />
-      <style> h1 {color:purple;}
-              h2 {color: Orange;}
-              h3 {color: Pink;}
-      </style>
+      <link href="styles.css" rel="stylesheet" />
     </head>
 <body>
   <header> Welcome to my page </header>
