--- a/index.html
+++ b/index.html
@@ -13,13 +13,9 @@
   <header> Welcome to my page </header>
 
   <nav>
-    <ul>
-      <li>About</li>
-      <li>Projects</li>
-      <li>Contact</li>
-    </ul>
-  </nav>
-  <main>
+    <ul>About, Projects, Contact </ul>
+   </nav>
+    <main>
     <section>
       <h1>About</h1>
     </section>
