--- a/index.html
+++ b/index.html
@@ -26,7 +26,54 @@
 
     <section>
       <h3>Contact</h3>
-    </section>
+    </section
+
+      <section id="projects">
+    <h2>Projects</h2>
+    <div class="project">
+        <h3>Project One</h3>
+        <p>Description of Project One. This project does amazing things!</p>
+        <img src="https://via.placeholder.com/150" alt="Placeholder image for Project One">
+    </div>
+    <div class="project">
+        <h3>Project Two</h3>
+        <p>Description of Project Two. This project is even more amazing!</p>
+        <img src="https://via.placeholder.com/150" alt="Placeholder image for Project Two">
+    </div>
+    <table>
+        <caption>Project Details</caption>
+        <colgroup>
+            <col style="background-color: #f2f2f2;">
+            <col>
+            <col style="background-color: #f2f2f2;">
+        </colgroup>
+        <thead>
+            <tr>
+                <th>Project Name</th>
+                <th>Description</th>
+                <th>Year</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Project One</td>
+                <td>A brief description of Project One.</td>
+                <td>2023</td>
+            </tr>
+            <tr>
+                <td>Project Two</td>
+                <td>A brief description of Project Two.</td>
+                <td>2023</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <th colspan="2">Total Projects</th>
+                <td>2</td>
+            </tr>
+        </tfoot>
+    </table>
+</section>
 
     <footer>Created by: Chelsea Martin &copy; &reg; </footer>
 </body>
