--- a/index.html
+++ b/index.html
@@ -1,34 +1,51 @@
 <!doctype html>
-<html>
 <html lang="en">
   <head>
-    <metacharset="utf-8" />
+    <meta charset="utf-8">
     <meta name="keywords"
-        content="charmer3412", Morganton" />
+        content="chemar3412,Morganton">
     <meta name="Author"
-        content="Chelsea Martin" />
+        content="Chelsea Martin">
       <link href="styles.css" rel="stylesheet" />
-    </head>
+      <title> My Web Page </title>
+  </head>
 <body>
-  <header> Welcome to my page </header>
+  <header> <h1>Welcome to my page</h1> </header>
 
   <nav>
-    <ul>About, Projects, Contact </ul>
-   </nav>
+    <ul>
+      <li><a href="#about">About</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
     <main>
     <section>
       <h1>About</h1>
     </section>
-
-    <section>
-      <h2>Projects</h2>
-    </section>
-
-    <section>
-      <h3>Contact</h3>
-    </section
-
-      <section id="projects">
+      <section id="contact">
+    <h3>Contact</h3>
+  </section>
+    <form>
+        <div class="form-group">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
+        </div>
+        <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+        </div>
+        <div class="form-group">
+            <label for="subject">Subject:</label>
+            <input type="text" id="subject" name="subject">
+        </div>
+        <div class="form-group">
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" rows="5"></textarea>
+        </div>
+        <button type="submit">Submit</button>
+    </form>
+</section>
+<section id="projects">
     <h2>Projects</h2>
     <div class="project">
         <h3>Project One</h3>
@@ -74,7 +91,7 @@
         </tfoot>
     </table>
 </section>
-
+    </main>
     <footer>Created by: Chelsea Martin &copy; &reg; </footer>
 </body>
 </html>
